# CosmosFusionPlus

./: .gitmodules  LICENSE  README.md
backend/: .dockerignore  .example.env  .gitignore  Dockerfile  README.md  package-lock.json  package.json  tsconfig.json
backend/scripts/: check-resolver.js
backend/src/: index.ts
backend/src/contracts/: Resolver.json
backend/src/middleware/: errorHandler.ts  security.ts
backend/src/routes/: swap.ts
backend/src/services/: CosmosClient.ts  CosmosResolver.ts  EvmClient.ts  EvmResolver.ts  RelayerService.ts  SwapOrderService.ts
backend/src/types/: index.ts
backend/src/utils/: logger.ts
evm/: README.md  deployResolver.js  deployment.json  package-lock.json
evm-contracts/: README.md
frontend/: .env.local  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/types/: global.d.ts
frontend/src/ui/: App.tsx
futurePlans/ibc-hub-spoke/: Cargo.toml
futurePlans/ibc-hub-spoke/src/: contract.rs  error.rs  ibc.rs  lib.rs  msg.rs  state.rs
wasm-contracts/: .gitignore  Makefile  README.md  deploy.js  deployment.json  env.example  package-lock.json  package.json
wasm-contracts/escrow/: Cargo.toml
wasm-contracts/escrow/artifacts/: checksums.txt
wasm-contracts/escrow/src/: contract.rs  error.rs  lib.rs  msg.rs  state.rs
wasm-contracts/escrowFactory/: Cargo.toml
wasm-contracts/escrowFactory/artifacts/: checksums.txt
wasm-contracts/escrowFactory/src/: contract.rs  error.rs  lib.rs  msg.rs  state.rs
wasm-contracts/ibc/: Cargo.toml
wasm-contracts/ibc/src/: contract.rs  (+5 more)
(+1 files in other folders)
