[package]
name = "escrow-factory"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cosmwasm-std = { version = "1.5", features = ["staking"] }
cosmwasm-storage = "1.5"
cosmwasm-schema = "1.5"
cosmwasm-crypto = "1.5"
cosmwasm-derive = "1.5"
schemars = "0.8"
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
cw-storage-plus = "1.1"
cw-utils = "1.0"
getrandom = { version = "0.2", features = ["js"] }

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"

[dev-dependencies]
